- Fixed bug #52674 (FPM Status page returns inconsistent Content-Type headers).